Move opcode implementations into their own file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(emulator)
 
 add_definitions(-std=c++11 -Wall -Werror -Wextra -pedantic -g -ferror-limit=10000)
 
-add_executable(emulator src/main.cc src/CPU.cc src/CPU.h src/Gameboy.cc src/Gameboy.h src/MMU.cc src/MMU.h src/Clock.cc src/Clock.h src/Memory.cc src/Memory.h src/RegisterGroup.cc src/RegisterGroup.h src/Register.h src/Address.cc src/Address.h)
+add_executable(emulator src/main.cc src/CPU.cc src/CPU.h src/Gameboy.cc src/Gameboy.h src/MMU.cc src/MMU.h src/Clock.cc src/Clock.h src/Memory.cc src/Memory.h src/RegisterGroup.cc src/RegisterGroup.h src/Register.h src/Address.cc src/Address.h src/Opcodes.cc)
