Move CPU files into a subdirectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,20 +5,20 @@ project(emulator)
 add_definitions(-std=c++11 -Wall -Wextra -pedantic -g -ferror-limit=10000)
 
 add_executable(emulator
-    src/main.cc
-    src/cpu.cc
-    src/cpu.h
-    src/gameboy.cc
-    src/gameboy.h
-    src/mmu.cc
-    src/mmu.h
-    src/clock.cc
-    src/clock.h
-    src/memory.cc
-    src/memory.h
-    src/register.cc
-    src/register.h
     src/address.cc
     src/address.h
     src/bitwise.h
+    src/clock.cc
+    src/clock.h
+    src/gameboy.cc
+    src/gameboy.h
+    src/main.cc
+    src/cpu/cpu.cc
+    src/cpu/cpu.h
+    src/cpu/memory.cc
+    src/cpu/memory.h
+    src/cpu/mmu.cc
+    src/cpu/mmu.h
+    src/cpu/register.cc
+    src/cpu/register.h
 )
