Move log files into util/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,6 @@ add_executable(emulator
     src/clock.h
     src/gameboy.cc
     src/gameboy.h
-    src/log.cc
-    src/log.h
     src/main.cc
     src/cpu/cpu.cc
     src/cpu/cpu_opcodes.cc
@@ -27,5 +25,6 @@ add_executable(emulator
     src/cpu/mmu.h
     src/cpu/register.cc
     src/cpu/register.h
+    src/util/log.cc
     src/util/string.cc
 )
