Ignore warnings about requiring global constructors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_definitions(-Wall -Wextra -Wpedantic)
 add_definitions(-Wno-c++98-compat)
 add_definitions(-Wno-c++98-compat-pedantic)
 add_definitions(-Wno-padded)
+add_definitions(-Wno-global-constructors)
 
 # Temporarily silence warnings during development
 add_definitions(-Wno-unused-parameter)
