Ignore warnings about non-literal format strings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_definitions(-Wno-c++98-compat-pedantic)
 add_definitions(-Wno-padded)
 add_definitions(-Wno-global-constructors)
 add_definitions(-Wno-gnu-zero-variadic-macro-arguments)
+add_definitions(-Wno-format-nonliteral)
 
 # Temporarily silence warnings during development
 add_definitions(-Wno-unused-parameter)
