Ignore warnings about exit time destructors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ add_definitions(-Wno-padded)
 add_definitions(-Wno-global-constructors)
 add_definitions(-Wno-gnu-zero-variadic-macro-arguments)
 add_definitions(-Wno-format-nonliteral)
+add_definitions(-Wno-exit-time-destructors)
 
 # Temporarily silence warnings during development
 add_definitions(-Wno-unused-parameter)
