Add a Video object with access to the MMU

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,14 +36,19 @@ add_executable(emulator
     src/register.cc
     src/main.cc
     src/mmu.cc
+
     src/cpu/cpu.cc
     src/cpu/cpu_opcodes.cc
     src/cpu/cpu_opcodes_cb.cc
     src/cpu/cpu_opcode_mapping.cc
     src/cpu/cpu_opcode_fns.cc
+
+    src/video/video.cc
+
     src/util/files.cc
     src/util/log.cc
     src/util/string.cc
+
     src/video/screens/sfml.cc
 )
 
