Mark SFML include directory as 'SYSTEM' in CMake to suppress warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ declare_executable(emulator)
 
 # Find and link dependencies
 find_package(SFML 2 REQUIRED system window graphics)
-include_directories(${SFML_INCLUDE_DIR})
+include_directories(SYSTEM ${SFML_INCLUDE_DIR})
 target_link_libraries(emulator ${SFML_LIBRARIES})
 
 # FIXME: Temporarily silence warnings during development
