--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.4)
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/etc/build)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/etc/cmake)
 
 #------------------------------------------------
 
