--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,5 @@
 add_sources(
     address.cc
-    cartridge.cc
-    cartridge_info.cc
     debugger.cc
     gameboy.cc
     main.cc
@@ -9,6 +7,7 @@ add_sources(
     register.cc
 )
 
+add_subdirectory(cartridge)
 add_subdirectory(cpu)
 add_subdirectory(util)
 add_subdirectory(video)
