--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ addons:
         - libsfml-dev
 
 script:
-    - make release
+    - make --no-print-directory release
+    - ./scripts/run_test_roms
