Enable warning-less build on GCC and Clang
Fix issues with GCC build and ensure warning-less build on both
GCC and Clang.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,7 @@ include(add_sources)
 
 # C++ definitions
 add_definitions(-std=c++14)
-add_definitions(-Weverything -Wall -Wextra -Wpedantic)
-include(silence_weverything)
+include(add_warnings)
 
 add_subdirectory(src)
 
@@ -17,6 +16,3 @@ declare_executable(emulator)
 find_package(SFML 2 REQUIRED system window graphics)
 include_directories(SYSTEM ${SFML_INCLUDE_DIR})
 target_link_libraries(emulator ${SFML_LIBRARIES})
-
-# FIXME: Temporarily silence warnings during development
-add_definitions(-Wno-missing-noreturn)
