--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/platforms/sfml)
+
 include(add_warnings)
 include(add_sources)
 
@@ -8,10 +10,15 @@ project(emulator)
 add_definitions(-std=c++17)
 add_warnings()
 
-add_subdirectory(src)
+declare_library(emulator-core src)
 
-declare_executable(emulator)
+# SFML target
+declare_executable(emulator platforms/sfml)
 
 find_package(SFML 2 REQUIRED system window graphics)
 include_directories(SYSTEM ${SFML_INCLUDE_DIR})
-target_link_libraries(emulator ${SFML_LIBRARIES})
+target_link_libraries(emulator emulator-core ${SFML_LIBRARIES})
+
+# Test target
+declare_executable(emulator-test platforms/test)
+target_link_libraries(emulator-test emulator-core)
