Rename the project: emulator -> gbemu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,20 +5,20 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/platforms/sfml)
 include(add_warnings)
 include(add_sources)
 
-project(emulator)
+project(gbemu)
 
 add_definitions(-std=c++17)
 add_warnings()
 
-declare_library(emulator-core src)
+declare_library(gbemu-core src)
 
 # SFML target
-declare_executable(emulator platforms/sfml)
+declare_executable(gbemu platforms/sfml)
 
 find_package(SFML 2 REQUIRED system window graphics)
 include_directories(SYSTEM ${SFML_INCLUDE_DIR})
-target_link_libraries(emulator emulator-core ${SFML_LIBRARIES})
+target_link_libraries(gbemu gbemu-core ${SFML_LIBRARIES})
 
 # Test target
-declare_executable(emulator-test platforms/test)
-target_link_libraries(emulator-test emulator-core)
+declare_executable(gbemu-test platforms/test)
+target_link_libraries(gbemu-test gbemu-core)
