Make the SDL port the default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,18 +13,18 @@ add_warnings()
 declare_library(gbemu-core src)
 
 # SFML target
-declare_executable(gbemu platforms/sfml)
+declare_executable(gbemu-sfml platforms/sfml)
 
 find_package(SFML 2 REQUIRED system window graphics)
 include_directories(SYSTEM ${SFML_INCLUDE_DIR})
-target_link_libraries(gbemu gbemu-core ${SFML_LIBRARIES})
+target_link_libraries(gbemu-sfml gbemu-core ${SFML_LIBRARIES})
 
 # SDL target
-declare_executable(gbemu-sdl platforms/sdl)
+declare_executable(gbemu platforms/sdl)
 
 find_package(SDL2 REQUIRED)
 include_directories(SYSTEM ${SDL2_INCLUDE_DIRS})
-target_link_libraries(gbemu-sdl gbemu-core ${SDL2_LIBRARIES} ${SFML_LIBRARIES})
+target_link_libraries(gbemu gbemu-core ${SDL2_LIBRARIES} ${SFML_LIBRARIES})
 
 # Test target
 declare_executable(gbemu-test platforms/test)
