CMakeLists: make SFML (disabled) and SDL targets optional
to still be able to link with gbemu-core

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,18 +15,22 @@ add_warnings()
 declare_library(gbemu-core src)
 
 # SFML target
-# declare_executable(gbemu-sfml platforms/sfml)
+# find_package(SFML 2 COMPONENTS system window graphics)
 
-# find_package(SFML 2 REQUIRED system window graphics)
-# include_directories(SYSTEM ${SFML_INCLUDE_DIR})
-# target_link_libraries(gbemu-sfml gbemu-core ${SFML_LIBRARIES})
+# if (SFML_FOUND)
+#   declare_executable(gbemu-sfml platforms/sfml)
+#   include_directories(SYSTEM ${SFML_INCLUDE_DIR})
+#   target_link_libraries(gbemu-sfml gbemu-core ${SFML_LIBRARIES})
+# endif()
 
 # SDL target
-declare_executable(gbemu platforms/sdl)
+find_package(SDL2)
 
-find_package(SDL2 REQUIRED)
-include_directories(SYSTEM ${SDL2_INCLUDE_DIRS})
-target_link_libraries(gbemu gbemu-core ${SDL2_LIBRARIES})
+if (SDL2_FOUND)
+  declare_executable(gbemu platforms/sdl)
+  include_directories(SYSTEM ${SDL2_INCLUDE_DIRS})
+  target_link_libraries(gbemu gbemu-core ${SDL2_LIBRARIES})
+endif()
 
 # Test target
 declare_executable(gbemu-test platforms/test)
