Accept link cable data via a TCP port

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,22 +15,22 @@ add_warnings()
 declare_library(gbemu-core src)
 
 # SFML target
-# find_package(SFML 2 COMPONENTS system window graphics)
+find_package(SFML 2 COMPONENTS system window graphics network)
 
-# if (SFML_FOUND)
-#   declare_executable(gbemu-sfml platforms/sfml)
-#   include_directories(SYSTEM ${SFML_INCLUDE_DIR})
-#   target_link_libraries(gbemu-sfml gbemu-core ${SFML_LIBRARIES})
-# endif()
+if (SFML_FOUND)
+  declare_executable(gbemu-sfml platforms/sfml)
+  include_directories(SYSTEM ${SFML_INCLUDE_DIR})
+  target_link_libraries(gbemu-sfml gbemu-core ${SFML_LIBRARIES})
+endif()
 
 # SDL target
-find_package(SDL2)
-
-if (SDL2_FOUND)
-  declare_executable(gbemu platforms/sdl)
-  include_directories(SYSTEM ${SDL2_INCLUDE_DIRS})
-  target_link_libraries(gbemu gbemu-core ${SDL2_LIBRARIES})
-endif()
+# find_package(SDL2)
+#
+# if (SDL2_FOUND)
+#   declare_executable(gbemu platforms/sdl)
+#   include_directories(SYSTEM ${SDL2_INCLUDE_DIRS})
+#   target_link_libraries(gbemu gbemu-core ${SDL2_LIBRARIES})
+# endif()
 
 # Test target
 declare_executable(gbemu-test platforms/test)
